--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.2.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@vitejs/plugin-react": "latest",
+    "jsdom": "^24.0.0",
     "typescript": "latest",
     "vite": "latest",
     "vitest": "^2.1.9"
